# Montana-RCV

./: README.md  mt_scratch.ipynb  pyproject.toml
data/election/: mt_vtd_connected.json
data/election/mt_vest_16/: README.txt  mt_vest_16.dbf  mt_vest_16.shx
data/election/mt_vest_18/: README.txt  mt_vest_18.dbf  mt_vest_18.shx
data/election/mt_vest_20/: README.txt  mt_vest_20.dbf  mt_vest_20.shx
data/election/mt_vtd/: mt_vtd.dbf
process/: gen_ensembles.py  joiningdata.py
simulate/: etools.py  run_simulations.py  utils.py
